updated file structure

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row height-50">
         <div class="col-3 col-md-1"></div>
         <div class="col-6 col-md-5">
-            <img src="images/me.png" alt="Photo of Hector" id="myPhoto" class="float-left img-fluid img-thumbnail">
+            <img src="./assets/images/me.png" alt="Photo of Hector" id="myPhoto" class="float-left img-fluid img-thumbnail">
         </div>
         <div class="col-0 col-md-6"></div>
       </div>
