--- a/contact.html
+++ b/contact.html
@@ -43,20 +43,16 @@
     </header>
     <Main>
         <div class="container mt-3">
-            <div class="card bg-whtie border-danger">
+            <div class="card bg-white border-danger">
                 <div class="card-body">
                     <H1>Contact</H1>
                     <hr>
                     <p>hkfernandezdev@gmail.com</p>
+                    <p>www.linkedin.com/in/hector-k-fernandez</p>
                     <p>612-412-0494</p>
                 </div>
             </div>
         </div>    
     </Main>
-    <Footer class="fixed-bottom p-3 bg-white border-top">
-        <div class="container d-flex justify-content-center">
-            Text
-        </div>
-    </Footer>
 </body>
 </html>
