--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
   </head>
 <body>
-  <div class="container min-vh-100 orange">
+  <div class="orangeBorderSquare">
+  <div class="orangeBorderRound">
+  <div class="container min-vh-100">
 
       <header class="header bg-transparent m-4">
           <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -56,8 +58,16 @@
       </div>
 
       <div class="row h-50 p-3">
+        <div class="col-3 col-md-1"></div>
+        <div class="text-center text-md-left col-6 col-md-5">
+          <a href="https://github.com/hkfernandez">My Work on Github</a>
+        </div>
+        <div class="col-0 col-md-6"></div>
+      </div>
+
+      <div class="row h-50 p-3">
         <div class="col-1 col-md-2"></div>
-        <div class="text-sm-center text-md-left col col-10-sm col-md-6">
+        <div class="text-center text-md-left col col-10-sm col-md-6">
           I am a designer and web developer with a passion for utility, organization and beauty.
         </div>
         <div class="col-1 col-md-4"></div>
@@ -65,7 +75,7 @@
 
       <div class="row h-25 p-3">
         <div class="col-1 col-md-5"></div>
-        <div class="text-sm-center text-md-left col col-10-sm col-6-md">
+        <div class="text-center text-md-left col col-10-sm col-6-md">
           Front and backend coding bootcamp at the University of Minnesota
           <br>
           Masters Degree in set design for theatre at Brandeis University
@@ -74,12 +84,10 @@
       </div>
 
     </main>
-    <footer class="fixed-bottom p-3 bg-transparent">
-        <div class="container d-flex justify-content-center">
-            Text
-        </div>
-    </footer>
+
   </div>
+</div>
+</div>
 </body>
 </html>
 <!-- -->
