--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="./assets/style/style.css">
+  </head>
 <body class="bg-white">
     <header class="border-bottom">
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -44,7 +44,7 @@
     </header>
     <Main>
         <div class="container mt-3">
-            <div class="card bg-whtie border-secondary">
+            <div class="card bg-white border-secondary">
                 <div class="card-body">
                     <H1>Portfolio</H1>
                     <hr>
@@ -56,14 +56,24 @@
                         <p class="card-text">A simple way to stay up to date on the current weather in different cities.</p>
                       </div>
                     </div>
+                    <div class="card bg-light">
+                      <img class="card-img portfolioImg" src="./assets/images/recipeAppImg.png" alt="Card image">
+                      <div class="card">
+                        <h5 class="card-title"></h5>
+                        <a href="https://dorykahale.github.io/Recipe-Saver/" card-text">Personal Recipe Collection</a>
+                        <p class="card-text">Find new recipe ideas and keep your favorites in one clean interface.</p>
+                      </div>
+                    </div>
+                    <div class="card bg-light">
+                      <img class="card-img portfolioImg" src="./assets/images/appImage.png" alt="Card image">
+                      <div class="card">
+                        <h5 class="card-title"></h5>
+                        <a href="https://dorykahale.github.io/Recipe-Saver/" card-text">Daily Schedule</a>
+                        <p class="card-text">Keep all your appointments up to date with this daily planner.</p>
+                      </div>
+                    </div>
                 </div>
             </div>
-        </div>    
+        </div>  
+          
     </Main>
-    <Footer class="fixed-bottom p-3 bg-white border-top">
-        <div class="container d-flex justify-content-center">
-            Text
-        </div>
-    </Footer>
-</body>
-</html>
