added stock project to portfolio and improved styling - added link to resume and corrected link to linked-in

--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
       </div>
 
       <div class="row h-50 p-3">
-        <div class="col-3 col-md-1"></div>
-        <div class="text-center text-md-left col-6 col-md-5">
-          <a href="https://github.com/hkfernandez">My Work on Github</a>
-        </div>
-        <div class="col-0 col-md-6"></div>
+        <div class="col-2 col-md-1"></div>
+        <div class="text-center text-md-left col-8 col-md-5">
+			<p>
+				<a href="https://github.com/hkfernandez" class='button' target='blank'>My Work on Github</a>
+			</p>
+			<p>
+				<a href="https://drive.google.com/file/d/1khv5D-Mb2aM4oVDFQrrgkjT4x_4oNUKg/view?usp=sharing" class='button' target='blank'>My Resume</a>
+			</p>
+			</div>
+        <div class="col-2 col-md-6"></div>
       </div>
 
       <div class="row h-50 p-3">
