--- a/contact.html
+++ b/contact.html
@@ -8,47 +8,48 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="./assets/style/style.css">
+
 </head>
-<body class="bg-white">
-    <header class="border-bottom">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <a class="navbar-brand" href="#">Hector Fernandez</a>
-            <button class="navbar-toggler border-danger" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="contact.html">Contact <!--<span class="sr-only">(current)</span>--></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">About</a>
-                </li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li> -->
-              </ul>
-            </div>
-          </nav>
-    </header>
+<header class="header bg-transparent m-4">
+	<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+		<a class="navbar-brand" href="#">Hector Fernandez</a>
+		<button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse justify-content-end bg-transparent" id="navbarNavDropdown">
+		  <ul class="navbar-nav">
+			<li class="nav-item active">
+			  <a class="nav-link" href="contact.html">Contact <!--<span class="sr-only">(current)</span>--></a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="portfolio.html">Portfolio</a>
+			</li>
+			<li class="nav-item ">
+			  <a class="nav-link" href="index.html">About</a>
+			</li>
+			<!-- <li class="nav-item dropdown">
+			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Dropdown link
+			  </a>
+			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+				<a class="dropdown-item" href="#">Action</a>
+				<a class="dropdown-item" href="#">Another action</a>
+				<a class="dropdown-item" href="#">Something else here</a>
+			  </div>
+			</li> -->
+		  </ul>
+		</div>
+	  </nav>
+</header>
     <Main>
         <div class="container mt-3">
-            <div class="card bg-white border-danger">
+            <div>
                 <div class="card-body">
                     <H1>Contact</H1>
                     <hr>
                     <p>hkfernandezdev@gmail.com</p>
-                    <p>www.linkedin.com/in/hector-k-fernandez</p>
+                    <a href=" www.linkedin.com/in/hector-k-fernandez" class='button' target="blank">LinkedIn</a>
                     <p>612-412-0494</p>
                 </div>
             </div>
