--- a/portfolio.html
+++ b/portfolio.html
@@ -11,65 +11,78 @@
     <link rel="stylesheet" href="./assets/style/style.css">
   </head>
 <body class="bg-white">
-    <header class="border-bottom">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <a class="navbar-brand" href="#">Hector Fernandez</a>
-            <button class="navbar-toggler border-secondary" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="contact.html">Contact <!--<span class="sr-only">(current)</span>--></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">About</a>
-                </li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li> -->
-              </ul>
-            </div>
-          </nav>
-    </header>
+	<header class="header bg-transparent m-4">
+		<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+			<a class="navbar-brand" href="#">Hector Fernandez</a>
+			<button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end bg-transparent" id="navbarNavDropdown">
+			  <ul class="navbar-nav">
+				<li class="nav-item">
+				  <a class="nav-link" href="contact.html">Contact <!--<span class="sr-only">(current)</span>--></a>
+				</li>
+				<li class="nav-item active">
+				  <a class="nav-link" href="portfolio.html">Portfolio</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="index.html">About</a>
+				</li>
+				<!-- <li class="nav-item dropdown">
+				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Dropdown link
+				  </a>
+				  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<a class="dropdown-item" href="#">Action</a>
+					<a class="dropdown-item" href="#">Another action</a>
+					<a class="dropdown-item" href="#">Something else here</a>
+				  </div>
+				</li> -->
+			  </ul>
+			</div>
+		  </nav>
+	</header>
     <Main>
         <div class="container mt-3">
             <div class="card bg-white border-secondary">
                 <div class="card-body">
                     <H1>Portfolio</H1>
                     <hr>
-                    <div class="card bg-light">
+                    <div class="portfolio-card card">
+                      <img class="card-img portfolioImg" src="./assets/images/stocks.png" alt="Card image">
+                      <div class="border-bottom">
+                        <h5 class="card-title"></h5>
+                        <a href="https://secret-cliffs-66187.herokuapp.com/" class='button' target='blank'>LINK</a>
+						<br>
+                        <p class="">Learn about the stock market by trading risk free and following real time share prices.</p>
+                      </div>
+                    </div>
+                    <div class="portfolio-card card">
                       <img class="card-img portfolioImg" src="./assets/images/weatherDashboardImg.png" alt="Card image">
-                      <div class="card">
+                      <div class="border-bottom">
                         <h5 class="card-title"></h5>
-                        <a href="https://hkfernandez.github.io/weather_dashboard/class=" card-text">LINK</a>
-                        <p class="card-text">A simple way to stay up to date on the current weather in different cities.</p>
+                        <a href="https://hkfernandez.github.io/weather_dashboard/class=" class='button' target='blank'>LINK</a>
+						<br>
+                        <p class="">A simple way to stay up to date on the current weather in different cities.</p>
                       </div>
                     </div>
-                    <div class="card bg-light">
+                    <div class="portfolio-card card">
                       <img class="card-img portfolioImg" src="./assets/images/recipeAppImg.png" alt="Card image">
-                      <div class="card">
+                      <div class="border-bottom">
                         <h5 class="card-title"></h5>
-                        <a href="https://dorykahale.github.io/Recipe-Saver/" card-text">Personal Recipe Collection</a>
-                        <p class="card-text">Find new recipe ideas and keep your favorites in one clean interface.</p>
+						<p>
+                        <a href="https://dorykahale.github.io/Recipe-Saver/" class='button' target='blank'>Personal Recipe Collection</a>
+					  </p>
+                        <p>Find new recipe ideas and keep your favorites in one clean interface.</p>
                       </div>
                     </div>
-                    <div class="card bg-light">
+                    <div class="portfolio-card card">
                       <img class="card-img portfolioImg" src="./assets/images/appImage.png" alt="Card image">
-                      <div class="card">
+                      <div class="border-bottom">
                         <h5 class="card-title"></h5>
-                        <a href="https://dorykahale.github.io/Recipe-Saver/" card-text">Daily Schedule</a>
-                        <p class="card-text">Keep all your appointments up to date with this daily planner.</p>
+                        <a href="https://dorykahale.github.io/Recipe-Saver/" class='button' target='blank'>Daily Schedule</a>
+						<br>
+                        <p class="">Keep all your appointments up to date with this daily planner.</p>
                       </div>
                     </div>
                 </div>
