Update linkin link / update button formatting

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                     <H1>Contact</H1>
                     <hr>
                     <p>hkfernandezdev@gmail.com</p>
-                    <a href=" www.linkedin.com/in/hector-k-fernandez" class='button' target="blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/hector-fernandez-a831461b7/" class='button' target="blank">LinkedIn</a>
                     <p>612-412-0494</p>
                 </div>
             </div>
